added click listener to profile image of popup

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -38,7 +38,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Button"
-                app:srcCompat="@android:drawable/btn_star"
+                app:srcCompat="@android:drawable/ic_menu_revert"
                 android:layout_alignParentLeft="true"/>
 
             <ImageButton
@@ -64,7 +64,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:text="Button"
-                app:srcCompat="@android:drawable/btn_star_big_on"
+                app:srcCompat="@android:drawable/ic_menu_revert"
                 android:layout_alignParentLeft="true"/>
 
             <ImageButton
