user profiles will be be shown in a circular shape

--- a/app/src/main/res/layout/fragment_leaderboard.xml
+++ b/app/src/main/res/layout/fragment_leaderboard.xml
@@ -26,7 +26,6 @@
         android:elevation="0dp"
         android:id="@+id/user_profile_button"
         android:text="user profile"
-        app:layout_constraintRight_toLeftOf="@+id/confirmation_button"
         app:layout_constraintHorizontal_bias="0.45" />
 
     <TextView
@@ -34,11 +33,23 @@
         android:layout_height="wrap_content"
         android:ems="10"
         android:id="@+id/editText"
-        android:layout_marginTop="16dp"
+        android:layout_marginTop="24dp"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginEnd="16dp"
         app:layout_constraintRight_toRightOf="parent"
-        android:text="Leaderboard fragment" />
+        android:text="Leaderboard fragment"
+        app:layout_constraintHorizontal_bias="0.47" />
+
+    <ListView
+        android:layout_width="wrap_content"
+        android:layout_height="376dp"
+        tools:layout_editor_absoluteX="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp"
+        android:layout_marginTop="16dp"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintVertical_bias="0.52"
+        android:id="@+id/list" />
 </android.support.constraint.ConstraintLayout>
