Add Notification switch and custom header for Drawer

--- a/app/src/main/res/menu/main_drawer.xml
+++ b/app/src/main/res/menu/main_drawer.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<menu xmlns:android="http://schemas.android.com/apk/res/android">
+<menu xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <group android:checkableBehavior="single">
         <item
@@ -7,12 +8,13 @@
             android:title="Achievements" />
         <item
             android:id="@+id/my_findings"
-            android:title="Gallery" />
+            android:title="My Findings" />
         <item
             android:id="@+id/leaderboard"
             android:title="Leaderboard" />
         <item
             android:id="@+id/notification"
+            app:actionLayout="@layout/notification_switch"
             android:title="Notification" />
     </group>
 
