--- a/app/src/main/res/layout/list_item_leaderboard.xml
+++ b/app/src/main/res/layout/list_item_leaderboard.xml
@@ -5,6 +5,14 @@
     android:layout_height="match_parent"
     android:weightSum="1">
 
+    <TextView
+        android:id="@+id/number"
+        android:textColor="#000"
+        android:layout_width="0dp"
+        android:layout_weight="0.15"
+        android:layout_margin="10dp"
+        android:layout_height="wrap_content"/>
+
 
     <ImageView
         android:id="@+id/imageview"
@@ -13,15 +21,18 @@
         app:srcCompat="@mipmap/ic_launcher"
         android:layout_marginRight="10dp"
         android:contentDescription="@string/app_name"
-        android:src="@drawable/homi" />
+        android:src="@drawable/homi"
+        android:layout_weight="0.00" />
 
     <TextView
         android:id="@+id/title"
         android:textColor="#000"
-        android:layout_width="0dp"
-        android:layout_weight="1"
+        android:layout_width="match_parent"
+        android:layout_weight="0.69"
         android:layout_margin="10dp"
         android:layout_height="wrap_content"/>
+
+
 
 
 </LinearLayout>
