--- a/app/src/main/res/layout/activity_new_user.xml
+++ b/app/src/main/res/layout/activity_new_user.xml
@@ -18,7 +18,7 @@
         android:ems="10"
         android:layout_alignParentTop="true"
         android:layout_centerHorizontal="true"
-        android:id="@+id/userName"
+        android:id="@+id/newUserName"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginEnd="16dp"
@@ -26,4 +26,13 @@
         android:layout_marginTop="208dp"
         app:layout_constraintTop_toTopOf="parent"
         android:hint="Choose a username" />
+
+    <Button
+        android:text="Confirm"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:id="@+id/newUserConfirmButton"
+        app:layout_constraintLeft_toLeftOf="@+id/newUserName"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/newUserName" />
 </android.support.constraint.ConstraintLayout>
