--- a/app/src/main/res/layout/content_main.xml
+++ b/app/src/main/res/layout/content_main.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<android.support.constraint.ConstraintLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/content_main"
@@ -7,6 +8,17 @@
     android:layout_height="match_parent"
     tools:context="com.luke.lukef.lukeapp.MainActivity"
     tools:showIn="@layout/main_view">
+
+    <RelativeLayout
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
+        android:id="@+id/fragment_container">
+
+    </RelativeLayout>
 
     <LinearLayout
         android:id="@+id/linearLayout"
@@ -85,7 +97,9 @@
                 android:layout_alignParentLeft="true"
                 android:elevation="4dp"
                 android:text="Button"
-                app:srcCompat="@android:drawable/ic_dialog_dialer" />
+                app:srcCompat="@android:drawable/ic_dialog_dialer"
+                tools:layout_editor_absoluteY="0dp"
+                tools:layout_editor_absoluteX="0dp" />
 
             <ImageButton
                 android:id="@+id/button_mid"
@@ -103,17 +117,11 @@
                 android:layout_height="wrap_content"
                 android:layout_alignParentRight="true"
                 android:text="Button"
-                app:srcCompat="@android:drawable/ic_dialog_dialer" />
+                app:srcCompat="@android:drawable/ic_dialog_dialer"
+                />
         </RelativeLayout>
 
     </LinearLayout>
-
-    <RelativeLayout
-        android:id="@+id/fragment_container"
-        android:layout_width="48dp"
-        android:layout_height="48dp"
-        app:layout_constraintBottom_toTopOf="@+id/linearLayout"
-        app:layout_constraintLeft_toLeftOf="parent"></RelativeLayout>
 
 
 </android.support.constraint.ConstraintLayout>
