--- a/app/src/main/res/layout/fragment_new_submission.xml
+++ b/app/src/main/res/layout/fragment_new_submission.xml
@@ -7,36 +7,44 @@
     android:layout_height="match_parent">
 
     <Button
-        android:text="Confirmation"
+        android:text="Take A Picture"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginEnd="48dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp"
-        android:id="@+id/confirmation_button" />
+        android:id="@+id/activateCameraButton"
+        android:layout_marginTop="96dp"
+        app:layout_constraintTop_toTopOf="parent"
+        android:layout_marginStart="96dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textPersonName"
+        android:ems="10"
+        android:id="@+id/edittextTitle"
+        android:hint="Enter a title (optional)"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/activateCameraButton"
+        app:layout_constraintLeft_toLeftOf="@+id/activateCameraButton" />
+
+    <EditText
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:inputType="textMultiLine"
+        android:ems="10"
+        android:id="@+id/edittextDescrption"
+        android:hint="Write a description"
+        app:layout_constraintLeft_toLeftOf="@+id/edittextTitle"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/edittextTitle" />
 
     <Button
+        android:text="Choose categories"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginStart="64dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp"
-        android:elevation="0dp"
-        android:id="@+id/newsubmission_map_button"
-        android:text="back to map" />
+        android:id="@+id/buttonCategory"
+        app:layout_constraintLeft_toLeftOf="@+id/edittextDescrption"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/edittextDescrption" />
 
-    <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:ems="10"
-        android:id="@+id/editText"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        android:text="New submission" />
 </android.support.constraint.ConstraintLayout>
