--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -2,6 +2,15 @@
 
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
+        <item name="android:editTextColor">#424242</item>
+        <item name="android:textColorPrimary">#FAFAFA</item>
+        <item name="android:textColorSecondary">#424242</item>
+        <item name="android:textColorTertiary">#424242</item>
+        <item name="android:textColorPrimaryInverse">#424242</item>
+        <item name="android:textColorSecondaryInverse">#424242</item>
+        <item name="android:textColorTertiaryInverse">#424242</item>
+        <item name="android:colorPrimary">#004d99</item>
+
         <!-- Customize your theme here. -->
         <item name="colorPrimary">@color/colorPrimary</item>
         <item name="colorPrimaryDark">@color/colorPrimaryDark</item>
