--- a/app/src/main/res/layout/fragment_map.xml
+++ b/app/src/main/res/layout/fragment_map.xml
@@ -19,13 +19,14 @@
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent" />
 
-    <com.google.android.gms.maps.MapView
+    <fragment
         android:layout_width="0dp"
         android:layout_height="0dp"
-        android:id="@+id/mapView"
+        android:id="@+id/mapFragment"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        class="com.google.android.gms.maps.MapFragment"/>
 
 </android.support.constraint.ConstraintLayout>
