--- a/app/src/main/res/layout/fragment_new_submission.xml
+++ b/app/src/main/res/layout/fragment_new_submission.xml
@@ -12,12 +12,14 @@
         android:layout_height="wrap_content"
         android:id="@+id/activateCameraButton"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="16dp"
-        app:layout_constraintTop_toBottomOf="@+id/linearLayout3" />
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/imageView2"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <EditText
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:inputType="textPersonName"
         android:ems="10"
@@ -25,18 +27,22 @@
         android:hint="Enter a title (optional)"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/activateCameraButton"
-        app:layout_constraintLeft_toLeftOf="@+id/activateCameraButton" />
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <EditText
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
         android:inputType="textMultiLine"
         android:ems="10"
         android:id="@+id/newSubmissionEditTextDescrption"
         android:hint="Write a description"
         app:layout_constraintLeft_toLeftOf="@+id/newSubmissionEditTextTitle"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/newSubmissionEditTextTitle" />
+        app:layout_constraintTop_toBottomOf="@+id/newSubmissionEditTextTitle"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        app:layout_constraintRight_toRightOf="@+id/newSubmissionEditTextTitle" />
 
     <Button
         android:text="Choose categories"
@@ -59,7 +65,7 @@
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="0dp"
         app:layout_constraintLeft_toLeftOf="@+id/guideline"
-        app:layout_constraintBottom_toBottomOf="@+id/linearLayout3" />
+        app:layout_constraintBottom_toTopOf="@+id/guideline2" />
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
@@ -70,38 +76,32 @@
         tools:layout_editor_absoluteY="0dp"
         tools:layout_editor_absoluteX="192dp" />
 
-    <RelativeLayout
-        android:orientation="horizontal"
-        android:id="@+id/linearLayout3"
-        android:layout_height="0dp"
-        android:layout_width="0dp"
-        app:layout_constraintRight_toLeftOf="@+id/photoThumbnail"
-        app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintBottom_toTopOf="@+id/guideline2">
-
-    <org.osmdroid.views.MapView
-            android:layout_width="match_parent"
-            android:layout_height="match_parent"
-            android:id="@+id/thumbnailmap"></org.osmdroid.views.MapView>
-    </RelativeLayout>
-
     <android.support.constraint.Guideline
         android:layout_width="384dp"
         android:layout_height="wrap_content"
         android:id="@+id/guideline2"
         android:orientation="horizontal"
         app:layout_constraintGuide_percent="0.40388006"
-        tools:layout_editor_absoluteY="229dp"
+        tools:layout_editor_absoluteY="258dp"
         tools:layout_editor_absoluteX="0dp" />
 
     <Button
-        android:text="Button"
+        android:text="Submit"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/button_submit_test"
         android:layout_marginStart="8dp"
         app:layout_constraintLeft_toRightOf="@+id/buttonCategory"
         app:layout_constraintTop_toTopOf="@+id/buttonCategory" />
+
+    <ImageView
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:srcCompat="@drawable/com_auth0_lock_header_logo"
+        android:id="@+id/imageView2"
+        app:layout_constraintRight_toLeftOf="@+id/guideline"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintBottom_toTopOf="@+id/guideline2"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
