--- a/app/src/main/res/layout/fragment_new_submission.xml
+++ b/app/src/main/res/layout/fragment_new_submission.xml
@@ -6,18 +6,6 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent">
 
-    <Button
-        android:text="Take A Picture"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:id="@+id/activateCameraButton"
-        app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/imageView2"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent" />
-
     <EditText
         android:layout_width="0dp"
         android:layout_height="wrap_content"
@@ -25,12 +13,12 @@
         android:ems="10"
         android:id="@+id/newSubmissionEditTextTitle"
         android:hint="Enter a title (optional)"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/activateCameraButton"
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline2"
+        android:layout_marginTop="16dp" />
 
     <EditText
         android:inputType="textMultiLine"
@@ -58,14 +46,14 @@
 
     <ImageView
         android:layout_weight="1"
-        app:srcCompat="@drawable/com_auth0_lock_header_logo"
         android:id="@+id/photoThumbnail"
         android:layout_height="0dp"
         app:layout_constraintRight_toRightOf="parent"
         app:layout_constraintTop_toTopOf="parent"
         android:layout_width="0dp"
         app:layout_constraintLeft_toLeftOf="@+id/guideline"
-        app:layout_constraintBottom_toTopOf="@+id/guideline2" />
+        app:layout_constraintBottom_toTopOf="@+id/guideline2"
+        android:src="@mipmap/take_photo"/>
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
@@ -97,8 +85,7 @@
     <ImageView
         android:layout_width="0dp"
         android:layout_height="0dp"
-        app:srcCompat="@drawable/com_auth0_lock_header_logo"
-        android:id="@+id/imageView2"
+        android:id="@+id/newSubmissionMapThumbnail"
         app:layout_constraintRight_toLeftOf="@+id/guideline"
         app:layout_constraintTop_toTopOf="parent"
         app:layout_constraintBottom_toTopOf="@+id/guideline2"
