--- a/app/src/main/res/layout/activity_welcome.xml
+++ b/app/src/main/res/layout/activity_welcome.xml
@@ -3,7 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context="com.luke.lukef.lukeapp.fragments.WelcomeFragment">
+    android:background="@color/colorPrimary">
 
 
     <Button
@@ -18,7 +18,8 @@
         android:layout_marginStart="16dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintBottom_toBottomOf="parent"
-        android:layout_marginBottom="16dp" />
+        android:layout_marginBottom="16dp"
+        app:layout_constraintHorizontal_bias="0.47" />
 
     <Button
         android:text="skip login"
@@ -29,4 +30,67 @@
         app:layout_constraintRight_toRightOf="@+id/loginButton"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/loginButton" />
+
+    <ImageView
+        app:srcCompat="@drawable/logo_bonus_white"
+        android:id="@+id/imageView2"
+        app:layout_constraintTop_toTopOf="@+id/guideline3"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintRight_toLeftOf="@+id/guideline8"
+        app:layout_constraintLeft_toLeftOf="parent"
+        app:layout_constraintHorizontal_bias="0.66"
+        app:layout_constraintVertical_bias="0.0"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_marginBottom="16dp" />
+
+    <android.support.constraint.Guideline
+        android:layout_width="384dp"
+        android:layout_height="wrap_content"
+        android:id="@+id/guideline3"
+        android:orientation="horizontal"
+        app:layout_constraintGuide_percent="0.8921875"
+        tools:layout_editor_absoluteY="571dp"
+        tools:layout_editor_absoluteX="0dp" />
+
+    <ImageView
+        app:srcCompat="@drawable/luke_en_white"
+        android:id="@+id/imageView3"
+        app:layout_constraintTop_toTopOf="@+id/guideline3"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintVertical_bias="0.65999997"
+        app:layout_constraintLeft_toLeftOf="@+id/guideline8"
+        app:layout_constraintRight_toLeftOf="@+id/guideline6"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2" />
+
+    <ImageView
+        app:srcCompat="@drawable/metropolia_white"
+        android:id="@+id/imageView4"
+        app:layout_constraintTop_toTopOf="@+id/guideline3"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintVertical_bias="0.38"
+        app:layout_constraintLeft_toLeftOf="@+id/guideline6"
+        app:layout_constraintBottom_toBottomOf="@+id/imageView2" />
+
+    <android.support.constraint.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="640dp"
+        android:id="@+id/guideline6"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.6354167"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="244dp" />
+
+    <android.support.constraint.Guideline
+        android:layout_width="wrap_content"
+        android:layout_height="640dp"
+        android:id="@+id/guideline8"
+        android:orientation="vertical"
+        app:layout_constraintGuide_percent="0.453125"
+        tools:layout_editor_absoluteY="0dp"
+        tools:layout_editor_absoluteX="174dp" />
+
 </android.support.constraint.ConstraintLayout>
