--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -10,5 +10,11 @@
     <color name="vintage_vanilla_white">#e4e4e4</color>
     <color name="super_red">#ff0000</color>
     <color name="storm_dust_gray">#535352</color>
+    <color name="clairvoyant">#6F0C8A</color>
+    <color name="marker_admin">#bd00bd</color>
+    <color name="marker_positive">#10bd00</color>
+    <color name="marker_neutral">#009dbd</color>
+    <color name="marker_negative">#bd0000</color>
+
 
 </resources>
