--- a/app/src/main/res/layout/activity_new_user.xml
+++ b/app/src/main/res/layout/activity_new_user.xml
@@ -9,7 +9,8 @@
     android:paddingLeft="@dimen/activity_horizontal_margin"
     android:paddingRight="@dimen/activity_horizontal_margin"
     android:paddingTop="@dimen/activity_vertical_margin"
-    tools:context="com.luke.lukef.lukeapp.NewUserActivity">
+    tools:context="com.luke.lukef.lukeapp.NewUserActivity"
+    android:fitsSystemWindows="true">
 
     <EditText
         android:layout_width="wrap_content"
