--- a/app/src/main/res/layout/popup_new_submission.xml
+++ b/app/src/main/res/layout/popup_new_submission.xml
@@ -81,11 +81,12 @@
         android:layout_height="0dp"
         app:srcCompat="@mipmap/ic_launcher"
         android:id="@+id/submissionSubmitterProfileImage"
-        tools:layout_editor_absoluteX="16dp"
         android:layout_marginTop="8dp"
         app:layout_constraintTop_toBottomOf="@+id/submissionTitle"
         app:layout_constraintBottom_toTopOf="@+id/submissionDate"
-        android:layout_marginBottom="8dp" />
+        android:layout_marginBottom="8dp"
+        android:layout_marginStart="16dp"
+        app:layout_constraintLeft_toLeftOf="parent" />
 
     <TextView
         android:text="Name Here"
@@ -129,7 +130,7 @@
         app:layout_constraintRight_toLeftOf="@+id/guideline10"
         android:layout_marginEnd="8dp"
         app:layout_constraintBottom_toTopOf="@+id/guideline12"
-        android:layout_marginBottom="8dp"></LinearLayout>
+        android:layout_marginBottom="8dp" />
 
     <ImageButton
         android:text="Button"
