--- a/app/src/main/res/layout/popup_test.xml
+++ b/app/src/main/res/layout/popup_test.xml
@@ -12,10 +12,13 @@
     <ImageView
         app:srcCompat="@mipmap/ic_launcher"
         android:id="@+id/submissionImageMain"
-        android:layout_height="301dp"
-        android:layout_width="300dp"
-        tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="0dp" />
+        android:layout_height="0dp"
+        android:layout_width="0dp"
+        app:layout_constraintBottom_toTopOf="@+id/guideline7"
+        app:layout_constraintTop_toTopOf="parent"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:scaleType="centerCrop"/>
 
     <TextView
         android:text="TextView, TextView, TextView, TextView, TextView, TextView, TextView, TextView, TextView, TextView, TextView, TextView, TextView, TextView, TextView, TextView, TextView, TextView, TextView, TextView, TextView, TextView, TextView, TextView, TextView, "
@@ -25,27 +28,22 @@
         app:layout_constraintTop_toTopOf="@+id/guideline11"
         app:layout_constraintBottom_toBottomOf="@+id/submissionImageMain"
         app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintLeft_toLeftOf="@+id/submissionImageMain" />
-
-    <ImageButton
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
-        android:src="@android:drawable/btn_radio"
-        android:layout_alignParentRight="true"
-        android:id="@+id/popup_button_positive"
-        android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintTop_toTopOf="@+id/guideline9"
-        android:layout_marginStart="16dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        app:layout_constraintLeft_toLeftOf="@+id/submissionImageMain"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintVertical_bias="1.0"
+        android:textSize="18sp"
+        android:textColor="@color/vintage_vanilla_white"
+        android:shadowColor="#000000"
+        android:shadowDx="0.0"
+        android:shadowDy="0.0"
+        android:shadowRadius="4.0"/>
 
     <android.support.constraint.Guideline
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:id="@+id/guideline7"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.602"
+        app:layout_constraintGuide_percent="0.68"
         tools:layout_editor_absoluteY="301dp"
         tools:layout_editor_absoluteX="0dp" />
 
@@ -63,49 +61,53 @@
         android:layout_height="wrap_content"
         android:id="@+id/guideline10"
         android:orientation="vertical"
-        app:layout_constraintGuide_percent="0.50666666"
+        app:layout_constraintGuide_percent="0.5"
         tools:layout_editor_absoluteY="0dp"
-        tools:layout_editor_absoluteX="152dp" />
+        tools:layout_editor_absoluteX="150dp" />
 
     <android.support.constraint.Guideline
         android:layout_width="300dp"
         android:layout_height="wrap_content"
         android:id="@+id/guideline11"
         android:orientation="horizontal"
-        app:layout_constraintGuide_percent="0.406"
+        app:layout_constraintGuide_percent="0.5"
         tools:layout_editor_absoluteY="203dp"
         tools:layout_editor_absoluteX="0dp" />
 
     <ImageView
-        android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_width="80dp"
+        android:layout_height="73dp"
         app:srcCompat="@mipmap/ic_launcher"
         android:id="@+id/submissionSubmitterProfileImage"
         tools:layout_editor_absoluteX="16dp"
         android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/submissionTitle"
-        app:layout_constraintBottom_toTopOf="@+id/submissionDate"
-        android:layout_marginBottom="8dp" />
+        app:layout_constraintTop_toBottomOf="@+id/submissionTitle" />
 
     <TextView
         android:text="Name Here"
-        android:layout_width="125dp"
-        android:layout_height="26dp"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
         android:id="@+id/submissionSubmitterName"
+        android:layout_marginStart="8dp"
         app:layout_constraintLeft_toRightOf="@+id/submissionSubmitterProfileImage"
-        android:layout_marginStart="24dp"
-        app:layout_constraintTop_toTopOf="@+id/submissionSubmitterProfileImage"
-        android:layout_marginTop="16dp" />
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/submissionTitle"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent" />
 
     <TextView
         android:text="Rank Here"
-        android:layout_width="wrap_content"
+        android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:id="@+id/submissionSubmitterRank"
-        android:layout_marginStart="24dp"
-        app:layout_constraintLeft_toRightOf="@+id/submissionSubmitterProfileImage"
         app:layout_constraintBottom_toBottomOf="@+id/submissionSubmitterProfileImage"
-        app:layout_constraintTop_toBottomOf="@+id/submissionSubmitterName" />
+        app:layout_constraintTop_toBottomOf="@+id/submissionSubmitterName"
+        app:layout_constraintVertical_bias="0.3"
+        android:layout_marginEnd="16dp"
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginStart="8dp"
+        app:layout_constraintLeft_toRightOf="@+id/submissionSubmitterProfileImage"
+        app:layout_constraintHorizontal_bias="0.54" />
 
     <TextView
         android:text="01.01.2001"
@@ -122,19 +124,15 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="8dp"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginStart="8dp"
         android:id="@+id/submissionCategoriesLinear"
         app:layout_constraintRight_toLeftOf="@+id/guideline10"
-        android:layout_marginEnd="8dp"
-        app:layout_constraintBottom_toTopOf="@+id/guideline12"
-        android:layout_marginBottom="8dp"></LinearLayout>
+        app:layout_constraintBottom_toTopOf="@+id/guideline12"></LinearLayout>
 
     <ImageButton
         android:text="Button"
         android:layout_width="wrap_content"
-        android:layout_height="0dp"
+        android:layout_height="wrap_content"
         android:id="@+id/submissionReportButton"
         app:layout_constraintRight_toRightOf="@+id/submissionImageMain"
         app:layout_constraintTop_toTopOf="@+id/submissionImageMain"
@@ -142,7 +140,8 @@
         android:layout_marginEnd="8dp"
         app:srcCompat="@android:drawable/ic_dialog_alert"
         app:layout_constraintBottom_toTopOf="@+id/guideline12"
-        android:layout_marginBottom="8dp" />
+        android:layout_marginBottom="8dp"
+        android:background="@null"/>
 
     <android.support.constraint.Guideline
         android:layout_width="300dp"
@@ -159,11 +158,29 @@
         android:layout_height="wrap_content"
         android:id="@+id/submissionTitle"
         app:layout_constraintLeft_toLeftOf="parent"
-        android:layout_marginTop="8dp"
-        app:layout_constraintTop_toBottomOf="@+id/reportDescription"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp"
-        app:layout_constraintRight_toRightOf="parent" />
+        app:layout_constraintRight_toRightOf="parent"
+        android:layout_marginTop="8dp"
+        app:layout_constraintTop_toBottomOf="@+id/reportDescription" />
+
+    <LinearLayout
+        android:orientation="vertical"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintTop_toTopOf="@+id/guideline9"
+        app:layout_constraintRight_toRightOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        android:background="@color/colorPrimaryDark">
+        <ImageButton
+            android:layout_width="wrap_content"
+            android:layout_height="match_parent"
+            android:background="@null"
+            app:srcCompat="@drawable/luke_tick"
+            android:layout_gravity="center"
+            android:id="@+id/popup_button_positive"/>
+    </LinearLayout>
 
 
 </android.support.constraint.ConstraintLayout>
