fixed issues from merge

--- a/app/src/main/res/layout/popup_categories.xml
+++ b/app/src/main/res/layout/popup_categories.xml
@@ -17,7 +17,7 @@
 
         <ImageButton
             android:id="@+id/categories_accept_button"
-            android:layout_width="wrap_content"
+            android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:background="@null"
             android:layout_gravity="center"
